fix(style): fix duplicated scrollbar

--- a/src/youtube-music.css
+++ b/src/youtube-music.css
@@ -96,3 +96,8 @@ tp-yt-iron-dropdown,
 tp-yt-paper-dialog {
   app-region: no-drag;
 }
+
+/* Fix duplicated scrollbar */
+body {
+  overflow: hidden !important;
+}
